inc_src = [
'support/RefCount.h',
'support/IntrusiveList.h',
'frontend/AST.h',
'frontend/ASTVisitor.h',
'frontend/ASTPrinter.h',
'frontend/Lexer.h',
'frontend/Parser.h',
'frontend/Type.h',
'frontend/Semantics.h',
'frontend/IRGen.h',
'ir/IR.h',
'ir/IRPrinter.h',
'ir/InstrBuilder.h',
'ir/ConstructSSALazy.h'
]
install_headers(inc_src)
