inc_src = [
'support/RefCount.h',
'support/IntrusiveList.h',
'c/AST.h',
'c/ASTVisitor.h',
'c/ASTPrinter.h',
'c/Lexer.h',
'c/Parser.h',
'c/Type.h',
'c/Semantics.h',
'c/IRGen.h',
'c/Symbol.h',
'ir/IR.h',
'ir/IRPass.h',
'ir/IRPrinter.h',
'ir/InstrBuilder.h',
'ir/IRBuilder.h',
'ir/LazySSABuilder.h',
'ir/DominatorTree.h',
'ir/RegLiveness.h'
]
install_headers(inc_src)
